--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,9 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "main.cpp",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/out"
             ],
             "options": {
                 "cwd": "${fileDirname}"
